--- a/1. Nava shooping/Naver shopping.ipynb
+++ b/1. Nava shooping/Naver shopping.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,6 +22,11 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -44,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -100,123 +105,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>이름</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>주제전체</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>만족도</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>디자인</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>가격</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>기능</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>소음</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>성능</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>사용성</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>색상</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>조작성</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>난방효과</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>관리</th>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>이동성</th>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: []\n",
-       "Index: [주제전체, 만족도, 디자인, 가격, 기능, 소음, 성능, 사용성, 색상, 조작성, 난방효과, 관리, 이동성]"
-      ]
-     },
-     "execution_count": 42,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "a = df.split('\\n')\n",
-    "b = pd.DataFrame(a, columns=['이름']).set_index('이름')\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\admin\\\\Desktop\\\\Last Project\\\\Code\\\\클로링'"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "%cd "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "b.to_csv('./b.csv', encoding='utf-8-sig')"
+    "# 데이터프레임으로 만들기\n",
+    "a = df.split('\\n')\n",
+    "b = pd.DataFrame(a, columns=['이름']).set_index('이름')"
    ]
   },
   {
@@ -224,12 +119,14 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "b.to_csv('./b.csv', encoding='utf-8-sig')"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -243,7 +140,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
