--- a/2. 리뷰가져 오기/Naver shopping review.ipynb
+++ b/2. 리뷰가져 오기/Naver shopping review.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,20 +17,13 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "from selenium.webdriver.common.keys import Keys\n",
-    "\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')"
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,76 +35,54 @@
     "\n",
     "\n",
     "#xpath\n",
-    "#shoppingmall_review =\"/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul\"\n",
-    "#shoppingmall_review = \"/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[2]/div/div[2]/ul/li[5]/a/strong\"\n",
     "shoppingmall_review = \"/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/div[2]/div[2]/div/ul/li[4]/a\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "가격\n",
-      "주제전체\n",
-      "만족도\n",
-      "디자인\n",
-      "가격\n",
-      "기능\n",
-      "소음\n",
-      "성능\n",
-      "사용성\n",
-      "색상\n",
-      "조작성\n",
-      "난방효과\n",
-      "관리\n",
-      "이동성\n"
+      "먼지 알러지가 있는 저에게는 필수 아이템이네요. 한달\n",
+      "먼지 알러지가 있는 저에게는 필수 아이템이네요. 한달 정도 사용한 후기 남깁니다.\n",
+      "1. 공간을 많이 차지하지 않고, 앞으로 나오는 바람 위로 나오는 바람 조절 가능\n",
+      "2. 이방 저방 들고 다니기에는 많이 무거움\n",
+      "3. 온풍기능은 다른 온풍기랑 비슷하고, 전기세는하루 2시간 정도 온풍 사용하면 약 3킬로와트(약 600원, 350~400킬로와트 사용 가정집 기준) 정도 사용\n",
+      "4. 보일러 난방 올라오기전 실내 빨리 따뜻하게 하기에는 좋음\n",
+      "5. 방은 금방 따뜻해지나, 거실은 1시간 정도는 사용해야 따뜻해짐\n",
+      "6. 초음파 방식 가습기랑 옆에 같이 사용하면 미네랄이 필터에 쌓여 온풍 기능이 먹통이됨 (홈페이지에 대처방법 나와있음)\n",
+      "7. 어플 연동이 잘되어 있어서 핸드폰으로 . (집밖에서도 조작 가능)\n",
+      "8. 샀으니깐 그냥 쓸만한 물건이다 정도?\n"
      ]
     }
    ],
    "source": [
     "header = {'User-Agent': ''}\n",
     "d = webdriver.Chrome('chromedriver.exe') # webdriver = chrome\n",
-    "d.implicitly_wait(1) #隐形等待， 加载完后进入， 没加载完报错超市\n",
+    "d.implicitly_wait(3) #隐形等待， 加载完后进入， 没加载完报错超市\n",
     "d.get(ns_address)\n",
     "req = requests.get(ns_address,verify=False)\n",
     "html = req.text \n",
     "soup = BeautifulSoup(html, \"html.parser\")\n",
-    "sleep(2)\n",
+    "sleep(3)\n",
+    "\n",
     "\n",
     "#쇼핑몰 리뷰 보기\n",
-    "d.find_element(\"xpath\",shoppingmall_review).click()\n",
+    "d.find_element(\"xpath\", shoppingmall_review).click()\n",
     "sleep(2)\n",
     "\n",
-    "# element = d.find_element(\"xpath\",shoppingmall_review)\n",
-    "# d.execute_script(\"arguments[0].click();\", element)\n",
-    "# sleep(2)\n",
     "\n",
+    "# 리뷰 가져오기\n",
+    "start = d.find_element(\"xpath\", '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li[1]/div[2]/div/em').text\n",
+    "end = d.find_element(\"xpath\", '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li[1]/div[2]/div[1]/p').text\n",
+    "print(start)\n",
+    "print(end)\n",
     "\n",
-    "\n",
-    "test_Text = d.find_element(\"xpath\",shoppingmall_review).text\n",
-    "print(test_Text)\n",
-    "\n",
-    "df = pd.DataFrame()\n",
-    "\n",
-    "test_Text = d.find_element(\"xpath\", '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/div[2]/div[2]/div/ul').text\n",
-    "df = test_Text\n",
-    "print(df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# 데이터프레임으로 만들기\n",
-    "a = df.split('\\n')\n",
-    "b = pd.DataFrame(a, columns=['이름']).set_index('이름')"
+    "start = d.find_element(\"xpath\", '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li[2]/div[2]/div/em').text\n"
    ]
   },
   {
@@ -120,7 +91,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "b.to_csv('./b.csv', encoding='utf-8-sig')"
+    "/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li[1]/div[3]/a"
    ]
   }
  ],
@@ -140,7 +111,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (default, Sep 16 2021, 16:59:28) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.7"
   },
   "orig_nbformat": 4,
   "vscode": {
