--- a/2. 리뷰가져 오기/Naver shopping review.ipynb
+++ b/2. 리뷰가져 오기/Naver shopping review.ipynb
@@ -40,23 +40,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 76,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "먼지 알러지가 있는 저에게는 필수 아이템이네요. 한달\n",
-      "먼지 알러지가 있는 저에게는 필수 아이템이네요. 한달 정도 사용한 후기 남깁니다.\n",
-      "1. 공간을 많이 차지하지 않고, 앞으로 나오는 바람 위로 나오는 바람 조절 가능\n",
-      "2. 이방 저방 들고 다니기에는 많이 무거움\n",
-      "3. 온풍기능은 다른 온풍기랑 비슷하고, 전기세는하루 2시간 정도 온풍 사용하면 약 3킬로와트(약 600원, 350~400킬로와트 사용 가정집 기준) 정도 사용\n",
-      "4. 보일러 난방 올라오기전 실내 빨리 따뜻하게 하기에는 좋음\n",
-      "5. 방은 금방 따뜻해지나, 거실은 1시간 정도는 사용해야 따뜻해짐\n",
-      "6. 초음파 방식 가습기랑 옆에 같이 사용하면 미네랄이 필터에 쌓여 온풍 기능이 먹통이됨 (홈페이지에 대처방법 나와있음)\n",
-      "7. 어플 연동이 잘되어 있어서 핸드폰으로 . (집밖에서도 조작 가능)\n",
-      "8. 샀으니깐 그냥 쓸만한 물건이다 정도?\n"
+      "3\n",
+      "저렴하게 잘샀구요 곧 태어날 아가를 위해 장만 했어요\n",
+      "저렴하게 잘샀구요 곧 태어날 아가를 위해 장만 했어요\n",
+      "공기청정기 처음써보는거라 잘모르겟지만 기분탓인지 뭔가 쾌적해진 기분이에요 디자인도 넘예쁘규 잘 산것 같아요\n",
+      "\n",
+      "4\n",
+      "많이 늦어질 줄 알았는데\n",
+      "주문 후\n",
+      "많이 늦어질 줄 알았는데\n",
+      "주문 후 6일만에 도착했네요\n",
+      "하이마트가 할인도 많고\n",
+      "쿠폰도 포인트도 쓸 수 있고\n",
+      "카드 할인까지 활용할 수 있어서\n",
+      "\n",
+      "5\n",
+      "가격 저렴하게 사서 기분이 좋네\n",
+      "가격 저렴하게 사서 기분이 좋네요\n",
+      "디자인두 이뻐서 맘에들어요 매장서는 뭐 다르게 있겠지만130만정도여서 눈팅만하고 왔거든요 잘 쓸께요\n",
+      "\n",
+      "6\n",
+      "저렴하게 판매해주셔서 감사해요잘 사용하고 있어요배송 정말 빠르고 상품 좋네요:)온풍기 요금 표시에 많이 놀랐지만 자주 사용하지 않으니까 괜찮을 것같아요번창하세요!\n",
+      "저렴하게 판매해주셔서 감사해요\n",
+      "잘 사용하고 있어요\n",
+      "배송 정말 빠르고 상품 좋네요:)\n",
+      "온풍기 요금 표시에 많이 놀랐지만\n",
+      "자주 사용하지 않으니까 괜찮을 것같아요\n",
+      "!\n",
+      "\n",
+      "7\n",
+      "온풍 겸용이라고 해서 구매한건데받고 온충 전기세 보고 놀라 두번 사용하고 공기청정만 사용하고있어요 ㅎㅎ그래도 저렴하게 잘 구매해서 좋습니다디자인도 예쁘고 기능도 좋아요가전은 역시\n",
+      "온풍 겸용이라고 해서 구매한건데\n",
+      "받고 온충 전기세 보고 놀라 두번 사용하고 공기청정만 사용하고있어요 ㅎㅎ\n",
+      "그래도 저렴하게 잘 구매해서 좋습니다\n",
+      "디자인도 예쁘고 기능도 좋아요\n",
+      "가전은 역시 엘지네요\n",
+      "\n",
+      "8\n",
+      "가격도 저렴하고 배송도 빠릅니다\n",
+      "사계절용으로 구입했어요 정말 멋져요 가격 비교 시 제일 저렴했어요 인테리어 효과도 있고 고급스럽게 보여요 주문하고 이틀 뒤 받았습니다\n",
+      "\n",
+      "9\n",
+      "예약된 날짜에 정확히 배송해 주\n",
+      "예약된 날짜에 정확히 배송해 주셨네요\n",
+      "작동 잘되고…온풍도 생각보다 빨리 따뜻해지네요\n",
+      "좋은가격에 잘 구매했습니다.\n",
+      "\n"
      ]
     }
    ],
@@ -77,21 +113,13 @@
     "\n",
     "\n",
     "# 리뷰 가져오기\n",
-    "start = d.find_element(\"xpath\", '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li[1]/div[2]/div/em').text\n",
-    "end = d.find_element(\"xpath\", '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li[1]/div[2]/div[1]/p').text\n",
-    "print(start)\n",
-    "print(end)\n",
-    "\n",
-    "start = d.find_element(\"xpath\", '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li[2]/div[2]/div/em').text\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li[1]/div[3]/a"
+    "for i in range(3, 10):\n",
+    "    start = d.find_element(\"xpath\", '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li['+str(i)+']/div[2]/div/em').text\n",
+    "    end = d.find_element(\"xpath\",   '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li['+str(i)+']/div[2]/div/p').text\n",
+    "    print(i)\n",
+    "    print(start)\n",
+    "    print(end)\n",
+    "    print()"
    ]
   }
  ],
