Update Naver shopping review.ipynb

--- a/2. 리뷰가져 오기/Naver shopping review.ipynb
+++ b/2. 리뷰가져 오기/Naver shopping review.ipynb
@@ -107,19 +107,28 @@
     "sleep(3)\n",
     "\n",
     "\n",
-    "#쇼핑몰 리뷰 보기\n",
+    "# 쇼핑몰 리뷰 보기\n",
     "d.find_element(\"xpath\", shoppingmall_review).click()\n",
     "sleep(2)\n",
     "\n",
+    "# 데이터프레임 생성 (리뷰 정보 저장)\n",
+    "df = pd.DataFrame()\n",
     "\n",
     "# 리뷰 가져오기\n",
     "for i in range(3, 10):\n",
     "    start = d.find_element(\"xpath\", '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li['+str(i)+']/div[2]/div/em').text\n",
     "    end = d.find_element(\"xpath\",   '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li['+str(i)+']/div[2]/div/p').text\n",
+    "    dict = {\n",
+    "        'title' : start,\n",
+    "        'p' : end\n",
+    "    }\n",
+    "    \n",
     "    print(i)\n",
     "    print(start)\n",
     "    print(end)\n",
-    "    print()"
+    "    print()\n",
+    "    \n",
+    "    df = df.append(dict)"
    ]
   }
  ],
@@ -139,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 (default, Sep 16 2021, 16:59:28) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
