Update Naver shopping review.ipynb

--- a/2. 리뷰가져 오기/Naver shopping review.ipynb
+++ b/2. 리뷰가져 오기/Naver shopping review.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -61,38 +61,13 @@
       "쿠폰도 포인트도 쓸 수 있고\n",
       "카드 할인까지 활용할 수 있어서\n",
       "\n",
-      "5\n",
-      "가격 저렴하게 사서 기분이 좋네\n",
-      "가격 저렴하게 사서 기분이 좋네요\n",
-      "디자인두 이뻐서 맘에들어요 매장서는 뭐 다르게 있겠지만130만정도여서 눈팅만하고 왔거든요 잘 쓸께요\n",
+      "                           title  \\\n",
+      "0  저렴하게 잘샀구요 곧 태어날 아가를 위해 장만 했어요   \n",
+      "1            많이 늦어질 줄 알았는데\\n주문 후   \n",
       "\n",
-      "6\n",
-      "저렴하게 판매해주셔서 감사해요잘 사용하고 있어요배송 정말 빠르고 상품 좋네요:)온풍기 요금 표시에 많이 놀랐지만 자주 사용하지 않으니까 괜찮을 것같아요번창하세요!\n",
-      "저렴하게 판매해주셔서 감사해요\n",
-      "잘 사용하고 있어요\n",
-      "배송 정말 빠르고 상품 좋네요:)\n",
-      "온풍기 요금 표시에 많이 놀랐지만\n",
-      "자주 사용하지 않으니까 괜찮을 것같아요\n",
-      "!\n",
-      "\n",
-      "7\n",
-      "온풍 겸용이라고 해서 구매한건데받고 온충 전기세 보고 놀라 두번 사용하고 공기청정만 사용하고있어요 ㅎㅎ그래도 저렴하게 잘 구매해서 좋습니다디자인도 예쁘고 기능도 좋아요가전은 역시\n",
-      "온풍 겸용이라고 해서 구매한건데\n",
-      "받고 온충 전기세 보고 놀라 두번 사용하고 공기청정만 사용하고있어요 ㅎㅎ\n",
-      "그래도 저렴하게 잘 구매해서 좋습니다\n",
-      "디자인도 예쁘고 기능도 좋아요\n",
-      "가전은 역시 엘지네요\n",
-      "\n",
-      "8\n",
-      "가격도 저렴하고 배송도 빠릅니다\n",
-      "사계절용으로 구입했어요 정말 멋져요 가격 비교 시 제일 저렴했어요 인테리어 효과도 있고 고급스럽게 보여요 주문하고 이틀 뒤 받았습니다\n",
-      "\n",
-      "9\n",
-      "예약된 날짜에 정확히 배송해 주\n",
-      "예약된 날짜에 정확히 배송해 주셨네요\n",
-      "작동 잘되고…온풍도 생각보다 빨리 따뜻해지네요\n",
-      "좋은가격에 잘 구매했습니다.\n",
-      "\n"
+      "                                                   p  \n",
+      "0  저렴하게 잘샀구요 곧 태어날 아가를 위해 장만 했어요\\n공기청정기 처음써보는거라 잘...  \n",
+      "1  많이 늦어질 줄 알았는데\\n주문 후 6일만에 도착했네요\\n하이마트가 할인도 많고\\n...  \n"
      ]
     }
    ],
@@ -115,7 +90,7 @@
     "df = pd.DataFrame()\n",
     "\n",
     "# 리뷰 가져오기\n",
-    "for i in range(3, 10):\n",
+    "for i in range(3, 5):\n",
     "    start = d.find_element(\"xpath\", '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li['+str(i)+']/div[2]/div/em').text\n",
     "    end = d.find_element(\"xpath\",   '/html/body/div/div/div[2]/div[2]/div[2]/div[3]/div[6]/ul/li['+str(i)+']/div[2]/div/p').text\n",
     "    dict = {\n",
@@ -128,7 +103,9 @@
     "    print(end)\n",
     "    print()\n",
     "    \n",
-    "    df = df.append(dict)"
+    "    df = df.append(dict, ignore_index=True) \n",
+    "    \n",
+    "print(df)"
    ]
   }
  ],
