--- a/1. Nava shooping/Naver shopping.ipynb
+++ b/1. Nava shooping/Naver shopping.ipynb
@@ -8,14 +8,16 @@
    "source": [
     "from selenium import webdriver\n",
     "from selenium.webdriver.common.keys import Keys\n",
+    "\n",
     "from bs4 import BeautifulSoup\n",
     "from time import sleep\n",
+    "\n",
     "import requests\n",
     "import re\n",
+    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import os\n",
-    "import pandas as pd\n",
     "\n",
     "from selenium.webdriver.common.keys import Keys\n",
     "\n",
@@ -30,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -75,22 +77,20 @@
    ],
    "source": [
     "header = {'User-Agent': ''}\n",
+    "\n",
     "d = webdriver.Chrome('chromedriver.exe') # webdriver = chrome\n",
     "d.implicitly_wait(1) #隐形等待， 加载完后进入， 没加载完报错超市\n",
     "d.get(ns_address)\n",
-    "req = requests.get(ns_address,verify=False)\n",
+    "\n",
+    "req = requests.get(ns_address, verify=False)\n",
     "html = req.text \n",
+    "\n",
     "soup = BeautifulSoup(html, \"html.parser\")\n",
-    "sleep(2)\n",
+    "sleep(3)\n",
     "\n",
     "#쇼핑몰 리뷰 보기\n",
-    "d.find_element(\"xpath\",shoppingmall_review).click()\n",
-    "sleep(2)\n",
-    "\n",
-    "# element = d.find_element(\"xpath\",shoppingmall_review)\n",
-    "# d.execute_script(\"arguments[0].click();\", element)\n",
-    "# sleep(2)\n",
-    "\n",
+    "d.find_element(\"xpath\", shoppingmall_review).click()\n",
+    "sleep(3)\n",
     "\n",
     "\n",
     "test_Text = d.find_element(\"xpath\",shoppingmall_review).text\n",
@@ -105,13 +105,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['주제전체', '만족도', '디자인', '가격', '기능', '소음', '성능', '사용성', '색상', '조작성', '난방효과', '관리', '이동성']\n"
+     ]
+    }
+   ],
    "source": [
     "# 데이터프레임으로 만들기\n",
     "a = df.split('\\n')\n",
-    "b = pd.DataFrame(a, columns=['이름']).set_index('이름')"
+    "b = pd.DataFrame(a, columns=['이름']).set_index('이름')\n",
+    "print(a)"
    ]
   },
   {
@@ -140,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7 (default, Sep 16 2021, 16:59:28) [MSC v.1916 64 bit (AMD64)]"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
